# fastq-read-stats

./: .gitignore  CMakeLists.txt  README.md
include/: Timer.hpp  fastq.hpp  fastq_read_stats.hpp  gzip_wrappers.hpp  main.hpp  options.hpp
src/: fastq_read_stats.cpp  gzip_wrappers.cpp  main.cpp  options.cpp
